tiff 和 openlayer基本功能

--- a/myreactapp/public/index.html
+++ b/myreactapp/public/index.html
@@ -10,7 +10,7 @@
     position: relative;
   }
   </style>
-  <script type="text/javascript" src="//api.map.baidu.com/api?v=2.0&ak=pdSgmLr6GQSeiDqpaYqiLM8yoScrrON5"></script>
+  <script type="text/javascript" src="//api.map.baidu.com/api?v=2.0&ak=pdSgmLr6GQSeiDqpaYqiLM8yoScrrON5" src="https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList,URL"></script>
   
   <title>地图</title>
 </head>
