--- a/myreactapp/public/index.html
+++ b/myreactapp/public/index.html
@@ -13,7 +13,7 @@
   <script type="text/javascript" src="//api.map.baidu.com/api?v=2.0&ak=pdSgmLr6GQSeiDqpaYqiLM8yoScrrON5" src="https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList,URL"></script>
   <script type="text/javascript" src="http://api.tianditu.gov.cn/api?v=4.0&tk=7abc518adf1453251db7216a9a1e750c"></script>
   <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=AM_HTMLorMML-full"></script>
-  <title>地图</title>
+  <title>物理环境污染生态风险预警平台</title>
 </head>
 <body>
 <div id="frontend"></div>
